--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/studentmanagement
-spring.datasource.username=postgres
-spring.datasource.password=admin
+//spring.datasource.url=jdbc:postgresql://localhost:5432/studentmanagement
+//spring.datasource.username=postgres
+/spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:memDB;DB_CLOSE_DELAY=-1
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
