--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-//spring.datasource.url=jdbc:postgresql://localhost:5432/studentmanagement
-//spring.datasource.username=postgres
-/spring.datasource.password=admin
-//spring.jpa.hibernate.ddl-auto=create-drop
-//spring.jpa.show-sql=true
-//spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-//spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/studentmanagement
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
 
 
 spring.h2.console.enabled=true
