--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
